# Coding

./: .gitignore  .gitmodules  README.md
DN1Algoritmi/: CMakeLists.txt  DN1Algoritmi.cpp
DN2Algoritmi/: CMakeLists.txt
Programiranje II/SimonPlazar1001/: Artist.cpp  Artwork.cpp  Artwork.h  CMakeLists.txt  Gallery.cpp  Gallery.h  Painting.cpp  PrintIfPainting.cpp  PrintIfPainting.h  README.md  Sculpture.cpp  Sculpture.h  main.cpp
Programiranje II/SimonPlazar1002/: Artist.h  ArtistLivesAt.cpp  ArtistLivesAt.h  Artwork.cpp  Artwork.h  CMakeLists.txt  Gallery.cpp  Gallery.h  House.cpp  House.h  Luna.cpp  Luna.h  NebesnoTelo.cpp  NebesnoTelo.h  Painting.cpp  Painting.h  PrintIfPainting.cpp  PrintIfPainting.h  Satelit.cpp  Satelit.h  Sculpture.cpp  Sculpture.h  main.cpp
SimonPlazar0101/: SimonPlazar0101.cpp
SimonPlazar0102/: CMakeLists.txt
SimonPlazar0201/: Artwork.h  CMakeLists.txt  main.cpp
SimonPlazar0202/: CMakeLists.txt  main.cpp
SimonPlazar0301/: Time.cpp  Time.h  main.cpp
SimonPlazar0302/: CMakeLists.txt  TextUtility.cpp  TextUtility.h
SimonPlazar0401/: Artist.cpp  Artist.h  Gallery.cpp  Gallery.h  main.cpp
SimonPlazar0402/: CMakeLists.txt  Event.h  Person.cpp
SimonPlazar0501/: Artwork.cpp  Artwork.h  CMakeLists.txt  Gallery.cpp  Gallery.h
SimonPlazar0502/: CMakeLists.txt  Device.cpp  Device.h  Light.cpp  SmartHome.cpp  SmartHome.h  Speaker.cpp  Speaker.h  VentilationSystem.cpp  VentilationSystem.h  main.cpp
SimonPlazar0601/: CMakeLists.txt  Canvas.h  Circle.h  PrintUtility.cpp  Shape2D.cpp  Shape2D.h  Triangle.h  main.cpp
(+626 files in other folders)
