cmake_minimum_required(VERSION 3.21)
project(SimonPlazar1002)

set(CMAKE_CXX_STANDARD 14)

add_executable(SimonPlazar1002 main.cpp Artwork.cpp Artwork.h Date.cpp Date.h Artist.cpp Artist.h Gallery.cpp Gallery.h Painting.cpp Painting.h Sculpture.cpp Sculpture.h PrintIfPainting.cpp PrintIfPainting.h NebesnoTelo.cpp NebesnoTelo.h Satelit.cpp Satelit.h Luna.cpp Luna.h)
